formulario. Edicion completada

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,14 @@ nav{
     background-color: #95275c;
 }
 
-.btn{
+.h2{
+    color: #95275c;
+}
+
+.btn-primary{
     background-color: #95275c;
+}
+
+.btn-primary:hover{
+    background-color: #65183d;
 }
