se añadio el modal a la tabla

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,6 +21,6 @@ nav{
 }
 
 #botonActividades{
-    display: block; /* Asegurar que los botones ocupen todo el ancho disponible */
+    display: block; 
     width: 100%;
 }
