--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,9 +5,21 @@ nav{
     background-color: #95275c;
 }
 
-.h2{
+.h1{
     color: #95275c;
 }
+
+#containerForm {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 2px solid #85275C;
+  }
+
+  .form-title {
+    color: #85275C;
+  }
 
 .btn-primary{
     background-color: #95275c;
@@ -15,4 +27,12 @@ nav{
 
 .btn-primary:hover{
     background-color: #65183d;
+}
+#containerActivities{
+    min-height: 90%;
+}
+
+#botonActividades{
+    display: block; 
+    width: 100%;
 }
